[package]
name = "e2eoffline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.1"
anyhow = "=1.0.68"
base64 = "0.21.0"
getrandom = { version = "0.2.8", features = ["js"] }
once_cell = "1.17.1"
rand = "0.8.5"
rsa = {version="0.8.2", features=["sha2"]}
thiserror = "=1.0.38"
wasm-bindgen = "0.2.84"
web-sys = "0.3.61"
yew = { version = "0.20.0", features = ["csr"] }
